<?xml version="1.0" encoding="UTF-8"?>


<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.13</version>
        <relativePath/>
    </parent>

    <groupId>ch.admin.bj.swiyu</groupId>
    <artifactId>swiyu-issuer-parent</artifactId>
    <version>3.0.0</version>
    <name>Swiyu issuer parent pom</name>
    <description>Generic issuer for public beta</description>

    <packaging>pom</packaging>

    <modules>
        <module>issuer-service</module>
        <module>issuer-application</module>
    </modules>


    <properties>
        <java.version>21</java.version>
        <maven.compiler.proc>full</maven.compiler.proc>
        <sonar.jacoco.itReportPath>${project.basedir}/issuer-application/target/jacoco-it.exec
        </sonar.jacoco.itReportPath>
        <sonar.jacoco.reportPath>${project.basedir}/issuer-application/target/jacoco.exec</sonar.jacoco.reportPath>
        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
        <javacrumbs.shedlock.version>6.0.2</javacrumbs.shedlock.version>
        <archunit-junit5.verion>1.4.1</archunit-junit5.verion>
        <nimbus-jose-jwt.version>10.8</nimbus-jose-jwt.version>
        <bouncycastle.version>1.84</bouncycastle.version>
        <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
        <springdoc-openapi-starter-webmvc-ui.version>2.8.16</springdoc-openapi-starter-webmvc-ui.version>
        <openapi-generator-maven-plugin.version>7.19.0</openapi-generator-maven-plugin.version>
        <editorconfig-maven-plugin.version>0.1.3</editorconfig-maven-plugin.version>
        <primus-jce.version>2.4.4</primus-jce.version>
        <skip.doc-generate>true</skip.doc-generate>
        <sonar.issue.ignore.multicriteria.e1.ruleKey>xml:S3422</sonar.issue.ignore.multicriteria.e1.ruleKey>
        <sonar.issue.ignore.multicriteria.e1.resourceKey>**/pom.xml</sonar.issue.ignore.multicriteria.e1.resourceKey>
        <spring-doc.version>2.8.8</spring-doc.version>
        <authlete.version>1.7</authlete.version>
        <springframework.cloud.version>2025.0.1</springframework.cloud.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <generic-java-lib.version>1.4.0</generic-java-lib.version>
        <pact.version>4.6.20</pact.version>
        <jeap.version>20.5.0</jeap.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <!-- Todo check again on spring boot upgrade-->
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>

            <!-- Check again when spring-cloud-kubernetes-fabric8-config is updated -->
            <dependency>
                <groupId>io.vertx</groupId>
                <artifactId>vertx-core</artifactId>
                <version>4.5.26</version>
                <scope>compile</scope>
            </dependency>

            <!-- Source: https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.20.0</version>
                <scope>compile</scope>
            </dependency>

            <!-- Check again on Spring Boot update -->
            <dependency>
                <groupId>org.apache.tomcat.embed</groupId>
                <artifactId>tomcat-embed-core</artifactId>
                <version>10.1.54</version>
                <scope>compile</scope>
            </dependency>

            <!-- centrally manage swiyu-jws-signature-service version -->
            <dependency>
                <groupId>ch.admin.swiyu</groupId>
                <artifactId>swiyu-jws-signature-service</artifactId>
                <version>${generic-java-lib.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.swiyu</groupId>
                <artifactId>swiyu-did-resolver-adapter</artifactId>
                <version>${generic-java-lib.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.swiyu</groupId>
                <artifactId>swiyu-jwe-util</artifactId>
                <version>${generic-java-lib.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.swiyu</groupId>
                <artifactId>swiyu-jwt-util</artifactId>
                <version>${generic-java-lib.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.swiyu</groupId>
                <artifactId>swiyu-dpop-util</artifactId>
                <version>${generic-java-lib.version}</version>
            </dependency>
            <dependency>
                <groupId>au.com.dius.pact.provider</groupId>
                <artifactId>junit5spring</artifactId>
                <version>${pact.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>au.com.dius.pact.consumer</groupId>
                <artifactId>junit5</artifactId>
                <version>${pact.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                            <goal>prepare-agent-integration</goal>
                        </goals>
                    </execution>
                    <!-- Generate module jacoco.xml reports in verify phase -->
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>

            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.27.0</version>
                <configuration>
                    <printFailingErrors>true</printFailingErrors>
                    <linkXRef>false</linkXRef>
                    <failOnViolation>true</failOnViolation>
                    <failurePriority>2</failurePriority>
                    <rulesets>
                        <ruleset>.github/rulesets/java/pmd_omni_ruleset.xml</ruleset>
                    </rulesets>
                    <includeTests>false</includeTests>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>